# lumo

./: .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: bump-version.yml  check.yml  publish.yml
crates/daemon/: CLAUDE.md  Cargo.toml
crates/daemon/src/: main.rs  uninstall.rs
crates/daemon/src/handlers/: notify.rs
crates/shared/: CLAUDE.md  Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/database/entities/: event.rs  metric.rs  mod.rs  notification.rs
crates/shared/src/database/repositories/: mod.rs  notification_repo.rs  session_repo.rs
docs/: README.zh-CN.md
scripts/: bump-version.js
src-tauri/: CLAUDE.md  Cargo.toml  build.rs  tauri.ci.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json  typeshare.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: claude_session_commands.rs  mod.rs  notification_settings_commands.rs  skills_commands.rs  trends_commands.rs  uninstall_commands.rs
src-tauri/src/daemon/: health.rs  manager.rs  mod.rs  task_scheduler.rs
src-tauri/src/database/: connection.rs
src-tauri/src/database/repositories/: user_repo.rs
src-tauri/src/services/: analytics_service.rs  claude_config_service.rs  claude_session_service.rs  config_service.rs  marketplace_service.rs  mod.rs  notification_poller.rs  notification_settings_service.rs  projects_service.rs  skills_service.rs  stats_service.rs  subscription_usage_service.rs  time_range.rs  tools_service.rs  trends_service.rs  wrapped_service.rs
src-tauri/src/types/: claude_session.rs  mod.rs  skills.rs  trends.rs
src/bridges/: user-bridge.ts
