[package]
name = "app"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
toml = "0.8"

[dependencies]
# Workspace dependencies
serde_json.workspace = true
serde.workspace = true
log.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
typeshare.workspace = true
anyhow.workspace = true
chrono.workspace = true

# Tauri-specific dependencies (not in workspace)
tauri = { version = "2.9.5", features = ["image-png"] }
tauri-plugin-log = "2"
dirs = "5"

# Shared library
shared = { path = "../crates/shared" }
base64 = "0.22"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
